feat: Add Open Graph and Twitter meta tags for improved social sharing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Supercurators - Share & Discover</title>
+
+    <!-- Open Graph / Social Meta Tags -->
+    <meta property="og:title" content="Supercurators - Share & Discover" />
+    <meta property="og:description" content="Internet. Curated." />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="root"></div>
