--- a/index.html
+++ b/index.html
@@ -2,16 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.ico">
+    <!-- Favicon and App Icons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="/browserconfig.xml">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Supercurators - Share & Discover</title>
 
-    <!-- Open Graph / Social Meta Tags -->
+    <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:title" content="Supercurators - Share & Discover" />
     <meta property="og:description" content="Internet. Curated." />
     <meta property="og:image" content="/og-image.png" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://supercurators.com" />
+    <meta property="og:site_name" content="Supercurators" />
+
+    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Supercurators - Share & Discover" />
+    <meta name="twitter:description" content="Internet. Curated." />
+    <meta name="twitter:image" content="/og-image.png" />
+    
+    <!-- Additional Meta Tags -->
+    <meta name="description" content="Internet. Curated." />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <div id="root"></div>
